fixed alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,10 @@
-h2 {
+.about h2 {
   font-size: calc(0.5rem + 1.7vw);
 }
 
 .cover {
   background-image: url("../images/background3.jpg");
-  height: 800px;
+  height: calc(40rem + 10vw);
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
@@ -13,18 +13,18 @@ h2 {
   color: white;
 }
 
-.container-fluid .cover-icon img {
+header.cover div.container-fluid.cover-icon img {
 	filter: brightness(70%);
 	transition: 0.5s;
 }
 
-.container-fluid .cover-icon img:hover{
+header.cover div.container-fluid.cover-icon img:hover{
 	filter:brightness(100%);
 }
 
 .about {
   background-color: #DFDFDF;
-  height: 800px;
+  height: calc(40rem + 10vw);
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
@@ -33,20 +33,20 @@ h2 {
   color: black
 }
 
-.button {
-  background-color: transparent;
-  border: none;
-  color: white;
-  text-align: center;
-  font-size: 40px;
-  cursor: pointer;
-  border-radius: 10%;
-  transition-duration: 0.5s;
+section.experience {
+	text-align:center;
 }
 
-.button:hover {
-  background-color: white;
-  color: black;
+section.experience .col-12.col-md-6.icon {
+	text-align:right;	
+}
+
+section.experience .col.text {
+	text-align:left;
+}
+
+.experience img{
+	border-radius: 20%
 }
 
 /*
